--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     }
     header {
       height: 100vh;
-      background: url('ВСТАВЬ_ССЫЛКУ_НА_ФОТО_ЗДЕСЬ') center center / cover no-repeat;
+      background: url('https://ibb.co/bjVRn4Tm
+https://ibb.co/cz2sw3w
+https://ibb.co/p6rXdCX9
+https://ibb.co/TqBvVQKV
+https://ibb.co/mrpRyBpp') center center / cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
