--- a/index.html
+++ b/index.html
@@ -5,45 +5,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Alimzhan & Zhibek Wedding</title>
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      margin: 0;
       font-family: 'Georgia', serif;
-      background-color: #fff8f4;
+      background-color: #fffaf5;
       color: #333;
       scroll-behavior: smooth;
     }
     header {
+      position: relative;
       height: 100vh;
       background: url('https://i.ibb.co/bjVRn4Tm.jpg') center center / cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
-      color: white;
-      text-shadow: 0 1px 10px rgba(0,0,0,0.7);
+    }
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0,0,0,0.4);
+    }
+    .hero-content {
+      position: relative;
       text-align: center;
+      color: white;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.6);
     }
-    h1 { font-size: 3em; margin: 0; }
-    h2 { font-size: 1.5em; margin: 0.5em 0; }
-    section { padding: 40px 20px; max-width: 800px; margin: auto; }
-    .rsvp, .gallery { background-color: #f9e5df; padding: 30px; border-radius: 10px; }
+    .hero-content h1 {
+      font-size: 3.5em;
+    }
+    .hero-content p {
+      font-size: 1.5em;
+      margin-top: 0.5em;
+    }
+    section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      text-align: center;
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+    .gallery img {
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+    .rsvp {
+      background-color: #f9e5df;
+      padding: 40px;
+      border-radius: 12px;
+    }
     input, select, textarea, button {
-      width: 100%; margin: 10px 0; padding: 10px; font-family: inherit; font-size: 1em;
+      width: 100%;
+      margin: 10px 0;
+      padding: 12px;
+      font-size: 1em;
+      font-family: inherit;
     }
-    button { background-color: #ffb6b6; border: none; color: white; cursor: pointer; }
-    img.gallery-photo { width: 100%; max-width: 600px; margin-bottom: 20px; border-radius: 10px; }
+    button {
+      background-color: #e89999;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+    button:hover {
+      background-color: #cc7a7a;
+    }
+    #statusMsg {
+      text-align: center;
+      margin-top: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>Alimzhan & Zhibek</h1>
-  <h2>08.08.2025 — Алматы</h2>
+  <div class="hero-content">
+    <h1>Alimzhan & Zhibek</h1>
+    <p>08.08.2025 — Алматы</p>
+  </div>
 </header>
 
 <section>
   <h2>Приглашение</h2>
-  <p>
+  <p style="text-align:center;">
     Дорогие гости!<br>
     Мы рады пригласить вас на нашу свадьбу, которая состоится <b>8 августа 2025 года в 18:00</b><br>
     Место проведения: <b>ресторан «Достық», г. Алматы, ул. Бухторминская, 28</b><br><br>
@@ -53,9 +109,15 @@
   </p>
 </section>
 
-<section class="gallery">
-  <h2>Фото</h2>
-  <img src="https://i.ibb.co/bjVRn4Tm.jpg" class="gallery-photo" /><img src="https://i.ibb.co/cz2sw3w.jpg" class="gallery-photo" /><img src="https://i.ibb.co/p6rXdCX9.jpg" class="gallery-photo" /><img src="https://i.ibb.co/TqBvVQKV.jpg" class="gallery-photo" /><img src="https://i.ibb.co/mrpRyBpp.jpg" class="gallery-photo" />
+<section>
+  <h2>Галерея</h2>
+  <div class="gallery">
+    <img src="https://i.ibb.co/bjVRn4Tm.jpg" alt="photo1">
+    <img src="https://i.ibb.co/cz2sw3w.jpg" alt="photo2">
+    <img src="https://i.ibb.co/p6rXdCX9.jpg" alt="photo3">
+    <img src="https://i.ibb.co/TqBvVQKV.jpg" alt="photo4">
+    <img src="https://i.ibb.co/mrpRyBpp.jpg" alt="photo5">
+  </div>
 </section>
 
 <section class="rsvp">
@@ -73,11 +135,16 @@
   </form>
 </section>
 
-<audio autoplay loop>
+<audio id="bgMusic" autoplay loop muted>
   <source src="Archer_Marsh_-_Give_Me_Everything_Stripped_Down_77962486.mp3" type="audio/mpeg">
 </audio>
-
 <script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const audio = document.getElementById("bgMusic");
+    audio.muted = false;
+    audio.play().catch(() => {});
+  });
+
   document.getElementById("rsvpForm").addEventListener("submit", function(e){
     e.preventDefault();
     const form = e.target;
